added images and some data

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
 <nav
   id="_nav"
   class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" href="#">AE37G</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
           aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -46,9 +46,9 @@
       <li class="nav-item">
         <a class="nav-link" href="#_for">For Investors</a>
       </li>
-      <li class="nav-item">
+      <!--<li class="nav-item">
         <a class="nav-link" href="#_p-news">Portfolio News</a>
-      </li>
+      </li>-->
       <li class="nav-item">
         <a class="nav-link" href="#_contacts">Contacts</a>
       </li>
@@ -67,7 +67,7 @@
   <header
     id="_header"
     class="_h j-header bg-sz-cvr bg-p-cntr" style="background-image:
-url('https://picsum.photos/1200/2300?grayscale')">
+url('./img/shutterstock_598410983.jpg')">
     <div class="py-5 container d-flex justify-content-center flex-column align-items-center">
       <div class="row">
         <div class="col col-auto text-center text-white">
@@ -130,14 +130,13 @@ url('https://picsum.photos/1200/2300?grayscale')">
       </div>
     </div>
   </section>
-  <section id="_m-partner" style="background-image: url('https://picsum.photos/1600/2300?grayscale')"
+  <section id="_m-partner" style="background-image: url('./img/1.jpg')"
            class="qt bg-sz-cvr bg-p-cntr bg-attchmnt-scrll jumbotron jumbotron-fluid py-5">
     <div class="container py-5">
       <div class="row">
         <div class="col-12 offset-sm-6 col-sm-6 text-white">
-          <h3>IGOR RYABENKIY</h3>
+          <h3>Managing Partner: Olexandr Chernyak </h3>
           <hr class="w-50 border-success ml-0">
-          <h4>Managing Partner: Olexandr Chernyak </h4>
           <p class="lead">Bio: AE37 Global is the company, founded and managed by Olexandr Chernyak, who is a well-known
             entrepreneur and investor in the industry. Olexandr’s past experience includes founding and managing
             Carprice and Smartprice. These two companies became the leaders of its industries in Russia and CIS
@@ -228,84 +227,84 @@ url('https://picsum.photos/1200/2300?grayscale')">
       <div class="row">
         <div class="col-12 col-sm-6 col-md-4 col-xl-3 px-sm-3 mb-4">
           <div class="card border-0 shadow-sm">
-            <img src="https://picsum.photos/600/400?grayscale" class="card-img-top" alt="miro">
-            <div class="card-body">
+            <img src="./img/companies/portfolio1.jpg" class="card-img-top">
+            <!--<div class="card-body">
               <h4>Miro</h4>
               <p class="card-text"> Miro is an online collaboration and whiteboarding platform for teams and
                 organizations of all sizes.</p>
-            </div>
+            </div>-->
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4 col-xl-3 px-sm-3 mb-4">
           <div class="card border-0 shadow-sm">
-            <img src="https://picsum.photos/600/400?grayscale" class="card-img-top" alt="miro">
-            <div class="card-body">
+            <img src="./img/companies/portfolio2.jpg" class="card-img-top">
+            <!--<div class="card-body">
               <h4>Miro</h4>
               <p class="card-text"> Miro is an online collaboration and whiteboarding platform for teams and
                 organizations of all sizes.</p>
-            </div>
+            </div>-->
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4 col-xl-3 px-sm-3 mb-4">
           <div class="card border-0 shadow-sm">
-            <img src="https://picsum.photos/600/400?grayscale" class="card-img-top" alt="miro">
-            <div class="card-body">
+            <img src="./img/companies/portfolio3.jpg" class="card-img-top">
+            <!--<div class="card-body">
               <h4>Miro</h4>
               <p class="card-text"> Miro is an online collaboration and whiteboarding platform for teams and
                 organizations of all sizes.</p>
-            </div>
+            </div>-->
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4 col-xl-3 px-sm-3 mb-4">
           <div class="card border-0 shadow-sm">
-            <img src="https://picsum.photos/600/400?grayscale" class="card-img-top" alt="miro">
-            <div class="card-body">
+            <img src="./img/companies/portfolio4.jpg" class="card-img-top">
+            <!--<div class="card-body">
               <h4>Miro</h4>
               <p class="card-text"> Miro is an online collaboration and whiteboarding platform for teams and
                 organizations of all sizes.</p>
-            </div>
+            </div>-->
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4 col-xl-3 px-sm-3 mb-4">
           <div class="card border-0 shadow-sm">
-            <img src="https://picsum.photos/600/400?grayscale" class="card-img-top" alt="miro">
-            <div class="card-body">
+            <img src="./img/companies/portfolio5.jpg" class="card-img-top">
+            <!--<div class="card-body">
               <h4>Miro</h4>
               <p class="card-text"> Miro is an online collaboration and whiteboarding platform for teams and
                 organizations of all sizes.</p>
-            </div>
+            </div>-->
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4 col-xl-3 px-sm-3 mb-4">
           <div class="card border-0 shadow-sm">
-            <img src="https://picsum.photos/600/400?grayscale" class="card-img-top" alt="miro">
-            <div class="card-body">
+            <img src="./img/companies/portfolio6.jpg" class="card-img-top">
+            <!--<div class="card-body">
               <h4>Miro</h4>
               <p class="card-text"> Miro is an online collaboration and whiteboarding platform for teams and
                 organizations of all sizes.</p>
-            </div>
+            </div>-->
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4 col-xl-3 px-sm-3 mb-4">
           <div class="card border-0 shadow-sm">
-            <img src="https://picsum.photos/600/400?grayscale" class="card-img-top" alt="miro">
-            <div class="card-body">
+            <img src="./img/companies/portfolio7.jpg" class="card-img-top">
+            <!--<div class="card-body">
               <h4>Miro</h4>
               <p class="card-text"> Miro is an online collaboration and whiteboarding platform for teams and
                 organizations of all sizes.</p>
-            </div>
+            </div>-->
           </div>
         </div>
-        <div class="col-12 col-sm-6 col-md-4 col-xl-3 px-sm-3 mb-4">
+        <!--<div class="col-12 col-sm-6 col-md-4 col-xl-3 px-sm-3 mb-4">
           <div class="card border-0 shadow-sm">
-            <img src="https://picsum.photos/600/400?grayscale" class="card-img-top" alt="miro">
+            <img src="./img/companies/d19af7c3-0359-41cd-b03d-6a79d640325c.jfif" class="card-img-top" alt="miro">
             <div class="card-body">
               <h4>Miro</h4>
               <p class="card-text"> Miro is an online collaboration and whiteboarding platform for teams and
                 organizations of all sizes.</p>
             </div>
           </div>
-        </div>
+        </div>-->
       </div>
     </div>
   </section>
@@ -313,7 +312,7 @@ url('https://picsum.photos/1200/2300?grayscale')">
     <div class="container-fluid">
       <div class="row">
         <div class="col-12 col-sm-6 bg-sz-cvr bg-p-cntr" style="background-image:
-        url('https://picsum.photos/1200/2300?grayscale')"></div>
+        url('./img/ForInvestors.jpg')"></div>
         <div class="col-12 col-sm-6 p-4 p-sm-5">
           <div class="fr-content">
             <h3>For Investors</h3>
@@ -339,11 +338,11 @@ url('https://picsum.photos/1200/2300?grayscale')">
           </div>
         </div>
         <div class="col-12 col-sm-6 bg-sz-cvr bg-p-cntr order-1 " style="background-image:
-        url('https://picsum.photos/1200/2300?grayscale')"></div>
+        url('./img/ForStartups.jpg')"></div>
       </div>
     </div>
   </section>
-  <section id="_p-news" class="prtfl-nws bg-dark">
+  <!--<section id="_p-news" class="prtfl-nws bg-dark">
     <div class="py-5 container">
       <div class="row">
         <div class="col text-center text-white">
@@ -432,8 +431,8 @@ url('https://picsum.photos/1200/2300?grayscale')">
         </div>
       </div>
     </div>
-  </section>
-  <section id="_contacts" class="cntcts py-5">
+  </section>-->
+  <section id="_contacts" class="cntcts py-5 bg-dark">
     <div class="container">
       <div class="row">
         <div class="col-12 text-center mb-4">
@@ -452,7 +451,7 @@ url('https://picsum.photos/1200/2300?grayscale')">
         </div>-->
         <div class="col-12 offset-sm-4 col-sm-4 collapse" id="collapseForm">
           <!--          <h4 class="text-center">For other inquiries</h4>-->
-          <form method="post" name="contact_form" action="https://formspree.io/xgevqodn">
+          <form name="contact_form" action="mailto:khudomaka.b.ae37global@gmail.com" method="get">
             <div class="form-group">
               <label name="name" for="input-name">Name</label>
               <input type="text" class="form-control" id="input-name">
